force-app/main/default/objects/Outreach_Stats__c/Outreach_Stats__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Outreach Stats</label>
    <nameField>
        <displayFormat>OutreachStats-{0000}</displayFormat>
        <label>Outreach Stats #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>