force-app/main/default/objects/Outreach_Stats__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Threshold</fullName>
            </value>
            <value>
                <fullName>High Threshold</fullName>
            </value>
            <value>
                <fullName>PROP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>