force-app/main/default/objects/Outreach_Stats__c/fields/Distributed_Date__c.field-meta.xml
<CustomField>
    <fullName>Distributed_Date__c</fullName>
    <label>Distributed Date</label>
    <type>Date</type>
</CustomField>