force-app/main/default/objects/Outreach_Stats__c/fields/Estimated_Population_Demographics__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Population_Demographics__c</fullName>
    <label>Estimated Population Demographics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>