force-app/main/default/objects/Outreach_Stats__c/fields/Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Unit__c</fullName>
    <label>Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>