force-app/main/default/objects/Outreach_Stats__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Street Fairs &amp; Outreach</fullName>
            </value>
            <value>
                <fullName>Club Events</fullName>
            </value>
            <value>
                <fullName>Print &amp; Other Media</fullName>
            </value>
            <value>
                <fullName>Website Information</fullName>
            </value>
            <value>
                <fullName>Website Visits</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>