force-app/main/default/objects/Outreach_Stats__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipName>Outreach_UOS</relationshipName>
    <type>Lookup</type>
</CustomField>